# icongrid_to_openscad

./: CMakeLists.txt  Makefile  Write.scad  ig2gmsh.cpp  ig2oscad.cpp  ig2vtk.cpp  output.scad  polyhedra_functions.scad
cmake/Modules/: FindNetCDF.cmake
